--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create # create(develop) or update
+      ddl-auto: update # create(develop) or update
     properties:
       hibernate:
         format_sql: true
@@ -42,6 +42,11 @@ jwt:
   secret: ${JWT_SECRET}
   access-token-validity-in-seconds: ${JWT_ACCESS_VALIDITY}
   refresh-token-validity-in-seconds: ${JWT_REFRESH_VALIDITY}
+
+openai:
+  api-key: ${OPENAI_API_KEY}
+  chat-model: gpt-4o-mini
+  timeout-ms: 10000
 
 
 
