--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update   # 개발 단계는 create/update, 운영은 none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -35,11 +35,9 @@ spring:
             client-secret: ${NAVER_CLIENT_SECRET}
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            scope:
-              - nickname
-              - profile_image
-              - gender
+            # ⚠️ redirect-uri는 각 프로필에서 지정
+            redirect-uri: ${NAVER_REDIRECT_URI}
+            scope: [nickname, profile_image, gender]
             client-name: Naver
         provider:
           naver:
@@ -53,14 +51,10 @@ jwt:
   access-token-validity-in-seconds: ${JWT_ACCESS_VALIDITY}
   refresh-token-validity-in-seconds: ${JWT_REFRESH_VALIDITY}
 
-openai:
-  api-key: ${OPENAI_API_KEY}
-  chat-model: gpt-4o-mini
-  timeout-ms: 10000
-
 springdoc:
   swagger-ui:
     persistAuthorization: false
     path: /swagger-ui.html
   api-docs:
     path: /v3/api-docs
+
