--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,65 @@
 spring:
   profiles: prod
 
-# 현재는 EC2:8080 기준 (나중에 도메인/HTTPS로 바꾸면 여기도 교체)
-NAVER_REDIRECT_URI: "http://3.36.148.255:8080/login/oauth2/code/naver"
+  application:
+    name: demo
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
+  datasource:
+    url: ${DB_URL}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
+  cache:
+    type: redis
+    redis:
+      time-to-live: 30m
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            client-id: ${NAVER_CLIENT_ID}
+            client-secret: ${NAVER_CLIENT_SECRET}
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            redirect-uri: "http://3.36.148.255:8080/login/oauth2/code/naver"  # 하드코딩된 redirect-uri
+            scope: [nickname, profile_image, gender]
+            client-name: Naver
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+jwt:
+  secret: ${JWT_SECRET}
+  access-token-validity-in-seconds: ${JWT_ACCESS_VALIDITY}
+  refresh-token-validity-in-seconds: ${JWT_REFRESH_VALIDITY}
+
+springdoc:
+  swagger-ui:
+    persistAuthorization: false
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
+
+# CORS 설정
 cors:
   allowed-origins:
     - "http://3.36.148.255:8080"
