--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,7 @@
 spring:
-  profiles: local  # 로컬 환경 활성화
+  config:
+    activate:
+      on-profile: local # 로컬 환경 활성화
 
   application:
     name: demo
