--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -39,7 +39,7 @@ spring:
             client-secret: ${NAVER_CLIENT_SECRET}
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
-            redirect-uri: "http://hwalibo-backend.duckdns.org/login/oauth2/code/naver"  # 하드코딩된 redirect-uri
+            redirect-uri: "https://hwalibo-backend.duckdns.org/login/oauth2/code/naver"  # 하드코딩된 redirect-uri
             scope: [nickname, profile_image, gender]
             client-name: Naver
         provider:
