--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,4 +1,4 @@
-        spring:
+spring:
   application:
     name: demo
 
@@ -11,7 +11,7 @@
     aws:
       credentials:
         access-key: ${AWS_ACCESS_KEY_ID}
-        secret-key: ${AWS_SECRET_ACCESS_KEY}
+        secret-key: ${AWS_SECRET_KEY_ID}
       s3:
         bucket: ${AWS_S3_BUCKET}
       region:
