--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,6 +103,7 @@ jobs:
                   redis:
                     condition: service_healthy
                 environment:
+                  - SPRING_PROFILES_ACTIVE=prodg
                   - SPRING_DATASOURCE_URL=\${DB_URL}
                   - SPRING_DATASOURCE_USERNAME=\${DB_USERNAME}
                   - SPRING_DATASOURCE_PASSWORD=\${DB_PASSWORD}
