프론트엔드 연결

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -81,3 +81,7 @@ springdoc:
     path: /swagger-ui.html
   api-docs:
     path: /v3/api-docs
+
+app:
+  oauth2:
+    redirect-uri: http://localhost:5173/auth/callback
