--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,20 +20,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Build with Gradle
         run: ./gradlew build -x test
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push Docker Image
         uses: docker/build-push-action@v5
         with:
@@ -49,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up SSH key
+      - name: Set up SSH key (agent)
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.EC2_PEM_KEY }}
@@ -61,16 +66,18 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PEM_KEY }}
           script: |
-            # 1. Login to Docker Hub
+            set -e
+
+            # 1) Login to Docker Hub
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-            
-            # 2. Stop and remove existing containers (Use 'docker compose')
+
+            # 2) Stop/remove existing stack (ignore if first deploy)
             docker compose down || true
-            
-            # 3. Pull the latest image
+
+            # 3) Pull the latest image built in previous job
             docker pull ${{ env.DOCKER_IMAGE }}:${{ needs.build.outputs.version }}
-            
-            # 4. Create .env file from GitHub Secrets
+
+            # 4) Create/refresh .env for docker-compose
             echo "SPRING_PROFILES_ACTIVE=prod" > .env
             echo "DB_URL=${{ secrets.DB_URL }}" >> .env
             echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
@@ -86,13 +93,18 @@ jobs:
             echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
             echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
             echo "AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}" >> .env
+            # (선택) GOOGLE_APPLICATION_CREDENTIALS 값도 .env에 남기고 싶다면:
+            echo "GOOGLE_APPLICATION_CREDENTIALS=/app/config/service-account.json" >> .env
 
-            # 5. Create docker-compose.yml file (Ensure correct content and use environment variables)
-            cat <<EOF > docker-compose.yml
+            # 5) Write GCP credential file from Secret (Base64 → JSON)
+            echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_BASE64 }}" | base64 -d > service-account.json
+            chmod 600 service-account.json
 
+            # 6) Create docker-compose.yml (with GCP credentials env + volume mount)
+            cat <<'EOF' > docker-compose.yml
             services:
               app:
-                image: ${{ env.DOCKER_IMAGE }}:${{ needs.build.outputs.version }}
+                image: ${DOCKER_IMAGE}:${VERSION}
                 container_name: hwalibo-app
                 ports:
                   - "8080:8080"
@@ -102,27 +114,31 @@ jobs:
                   redis:
                     condition: service_healthy
                 environment:
-                  - SPRING_DATASOURCE_URL=\${DB_URL}
-                  - SPRING_DATASOURCE_USERNAME=\${DB_USERNAME}
-                  - SPRING_DATASOURCE_PASSWORD=\${DB_PASSWORD}
-                  - SPRING_DATA_REDIS_HOST=\${REDIS_HOST}
-                  - SPRING_DATA_REDIS_PORT=\${REDIS_PORT}
-                  - JWT_SECRET=\${JWT_SECRET}
-                  - JWT_ACCESS_VALIDITY=\${JWT_ACCESS_VALIDITY}
-                  - JWT_REFRESH_VALIDITY=\${JWT_REFRESH_VALIDITY}
-                  - NAVER_CLIENT_ID=\${NAVER_CLIENT_ID}
-                  - NAVER_CLIENT_SECRET=\${NAVER_CLIENT_SECRET}
-                  - OPENAI_API_KEY=\${OPENAI_API_KEY}
-                  - AWS_ACCESS_KEY_ID=\${AWS_ACCESS_KEY_ID}
-                  - AWS_SECRET_ACCESS_KEY=\${AWS_SECRET_ACCESS_KEY}
-                  - AWS_S3_BUCKET=\${AWS_S3_BUCKET}
+                  - SPRING_DATASOURCE_URL=${DB_URL}
+                  - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
+                  - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+                  - SPRING_DATA_REDIS_HOST=${REDIS_HOST}
+                  - SPRING_DATA_REDIS_PORT=${REDIS_PORT}
+                  - JWT_SECRET=${JWT_SECRET}
+                  - JWT_ACCESS_VALIDITY=${JWT_ACCESS_VALIDITY}
+                  - JWT_REFRESH_VALIDITY=${JWT_REFRESH_VALIDITY}
+                  - NAVER_CLIENT_ID=${NAVER_CLIENT_ID}
+                  - NAVER_CLIENT_SECRET=${NAVER_CLIENT_SECRET}
+                  - OPENAI_API_KEY=${OPENAI_API_KEY}
+                  - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+                  - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+                  - AWS_S3_BUCKET=${AWS_S3_BUCKET}
+                  # --- Google Cloud credentials ---
+                  - GOOGLE_APPLICATION_CREDENTIALS=/app/config/service-account.json
+                volumes:
+                  - ./service-account.json:/app/config/service-account.json:ro
                 restart: unless-stopped
 
               db:
                 image: mysql:8.0.43
                 container_name: hwalibo-db
                 environment:
-                  MYSQL_ROOT_PASSWORD: \${DB_PASSWORD}
+                  MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
                   MYSQL_DATABASE: toiletsystem
                   TZ: Asia/Seoul
                 command: >
@@ -130,7 +146,7 @@ jobs:
                   --character-set-server=utf8mb4
                   --collation-server=utf8mb4_0900_ai_ci
                 healthcheck:
-                  test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-p\${DB_PASSWORD}" ]
+                  test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-p${DB_PASSWORD}" ]
                   interval: 5s
                   timeout: 5s
                   retries: 60
@@ -155,9 +171,13 @@ jobs:
               db-data:
               redis-data:
             EOF
-            
-            # 6. Run containers with Docker Compose (Use 'docker compose')
+
+            # 7) Substitute env vars for image tag (Compose reads .env automatically)
+            export DOCKER_IMAGE=${{ env.DOCKER_IMAGE }}
+            export VERSION=${{ needs.build.outputs.version }}
+
+            # 8) Up stack
             docker compose up -d
-            
-            # 7. Prune unused Docker images
+
+            # 9) Cleanup unused images
             docker image prune -f
