build.gradle application-prod.yml vision api 설정 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -91,7 +91,12 @@ logging:
 
 server:
   forward-headers-strategy: framework
+
 app:
   oauth2:
     redirect-uri: http://localhost:5173/auth/callback
     #https://frontendproj-git-main-choiys-projects.vercel.app/auth/callback
+
+feature:
+  vision:
+    enabled: true
