이미지 검수 기능 추가 -버전 에러,구글 ai로 변경 필요

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -81,3 +81,7 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+google:
+  credentials:
+    path: "classpath:hwalibo-995529f0307e.json"
