build.gradle 에러로 이전 상태로 돌림

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+	sourceCompatibility = '21'
 }
 
 configurations {
@@ -23,15 +24,6 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
-dependencyManagement {
-	imports {
-		mavenBom "com.google.cloud:libraries-bom:26.71.0"
-		mavenBom "io.awspring.cloud:spring-cloud-aws-bom:3.1.1"
-	}
-}
-
-def lombokVersion = "1.18.32"
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -46,16 +38,13 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
-	implementation "com.google.cloud:google-cloud-vision"
-
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+	implementation 'com.google.cloud:google-cloud-vision:3.34.0'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-	compileOnly "org.projectlombok:lombok:${lombokVersion}"
-	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-
+	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -64,3 +53,4 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
