--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,6 +10,7 @@ spring:
         secret-key: ${AWS_SECRET_ACCESS_KEY}
       s3:
         bucket: ${AWS_S3_BUCKET}
+
   application:
     name: demo
 
@@ -64,6 +65,7 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+
 jwt:
   secret: ${JWT_SECRET}
   access-token-validity-in-seconds: ${JWT_ACCESS_VALIDITY}
@@ -84,4 +86,10 @@ springdoc:
 
 google:
   credentials:
-    path: "classpath:hwalibo-995529f0307e.json"
+    path: "C:/Users/이동형/Desktop/hwalibo-995529f0307e.json"
+
+app:
+  oauth2:
+    redirect-uri: http://localhost:8080/swagger-ui.html
+    #https://frontendproj-git-main-choiys-projects.vercel.app/auth/callback
+
