--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -90,6 +90,6 @@ google:
 
 app:
   oauth2:
-    redirect-uri: http://localhost:8080/swagger-ui.html
+    redirect-uri: http://localhost:8080/index.html
     #https://frontendproj-git-main-choiys-projects.vercel.app/auth/callback
 
