--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# Workflow name
 name: Hwalibo Project CI/CD
 
 on:
@@ -7,12 +6,10 @@ on:
 
 env:
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/hwalibo-app
-  VERSION: ${{ github.sha }} # Use Git commit hash as the version
+  VERSION: ${{ github.sha }}
 
 jobs:
-  # 1. Build Job (CI)
   build:
-    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     outputs:
       version: ${{ env.VERSION }}
@@ -24,8 +21,8 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
           distribution: 'temurin'
+          java-version: '21'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -39,27 +36,24 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker Image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
-          labels: org.opencontainers.image.revision=${{ github.sha }}
 
-  # 2. Deploy Job (CD)
   deploy:
-    name: Deploy to EC2
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up SSH key (agent)
+      - name: SSH Agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.EC2_PEM_KEY }}
 
-      - name: Deploy to EC2 instance
+      - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -68,22 +62,15 @@ jobs:
           script: |
             set -e
 
-            # 1) Login to Docker Hub
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
-            # 2) Stop/remove existing stack (ignore if first deploy)
             docker compose down || true
 
-            # 3) Pull the latest image built in previous job
             docker pull ${{ env.DOCKER_IMAGE }}:${{ needs.build.outputs.version }}
 
-            # 4) Create/refresh .env for docker-compose
-            echo "SPRING_PROFILES_ACTIVE=prod" > .env
-            echo "DB_URL=${{ secrets.DB_URL }}" >> .env
-            echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+            # -------- .env 생성 (필요한 값만) --------
+            echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" > .env
             echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-            echo "REDIS_HOST=${{ secrets.REDIS_HOST }}" >> .env
-            echo "REDIS_PORT=${{ secrets.REDIS_PORT }}" >> .env
             echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
             echo "JWT_ACCESS_VALIDITY=${{ secrets.JWT_ACCESS_VALIDITY }}" >> .env
             echo "JWT_REFRESH_VALIDITY=${{ secrets.JWT_REFRESH_VALIDITY }}" >> .env
@@ -95,92 +82,20 @@ jobs:
             echo "AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}" >> .env
             echo "DOCKER_IMAGE=${{ env.DOCKER_IMAGE }}" >> .env
             echo "VERSION=${{ needs.build.outputs.version }}" >> .env
-  
-            # (선택) GOOGLE_APPLICATION_CREDENTIALS 값도 .env에 남기고 싶다면:
-            echo "GOOGLE_APPLICATION_CREDENTIALS=/app/config/service-account.json" >> .env
 
-            # 5) Write GCP credential file from Secret (Base64 → JSON)
+            # -------- GOOGLE CREDENTIALS --------
             echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_BASE64 }}" | base64 -d > service-account.json
             chmod 600 service-account.json
 
-            # 6) Create docker-compose.yml (with GCP credentials env + volume mount)
+            # -------- docker-compose.yml 자동 생성 --------
             cat <<'EOF' > docker-compose.yml
-            services:
-              app:
-                image: ${DOCKER_IMAGE}:${VERSION}
-                container_name: hwalibo-app
-                ports:
-                  - "8080:8080"
-                depends_on:
-                  db:
-                    condition: service_healthy
-                  redis:
-                    condition: service_healthy
-                environment:
-                  - SPRING_DATASOURCE_URL=${DB_URL}
-                  - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
-                  - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
-                  - SPRING_DATA_REDIS_HOST=${REDIS_HOST}
-                  - SPRING_DATA_REDIS_PORT=${REDIS_PORT}
-                  - JWT_SECRET=${JWT_SECRET}
-                  - JWT_ACCESS_VALIDITY=${JWT_ACCESS_VALIDITY}
-                  - JWT_REFRESH_VALIDITY=${JWT_REFRESH_VALIDITY}
-                  - NAVER_CLIENT_ID=${NAVER_CLIENT_ID}
-                  - NAVER_CLIENT_SECRET=${NAVER_CLIENT_SECRET}
-                  - OPENAI_API_KEY=${OPENAI_API_KEY}
-                  - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-                  - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-                  - AWS_S3_BUCKET=${AWS_S3_BUCKET}
-                  # --- Google Cloud credentials ---
-                  - GOOGLE_APPLICATION_CREDENTIALS=/app/config/service-account.json
-                volumes:
-                  - ./service-account.json:/app/config/service-account.json:ro
-                restart: unless-stopped
-
-              db:
-                image: mysql:8.0.43
-                container_name: hwalibo-db
-                environment:
-                  MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-                  MYSQL_DATABASE: toiletsystem
-                  TZ: Asia/Seoul
-                command: >
-                  --default-authentication-plugin=caching_sha2_password
-                  --character-set-server=utf8mb4
-                  --collation-server=utf8mb4_0900_ai_ci
-                healthcheck:
-                  test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-p${DB_PASSWORD}" ]
-                  interval: 5s
-                  timeout: 5s
-                  retries: 60
-                  start_period: 40s
-                volumes:
-                  - db-data:/var/lib/mysql
-                restart: unless-stopped
-
-              redis:
-                image: redis:7.2.5-alpine
-                container_name: hwalibo-redis
-                healthcheck:
-                  test: ["CMD", "redis-cli", "ping"]
-                  interval: 5s
-                  timeout: 10s
-                  retries: 10
-                volumes:
-                  - redis-data:/data
-                restart: unless-stopped
-
-            volumes:
-              db-data:
-              redis-data:
+            (여기에 앞에서 준 docker-compose.yml 내용 그대로 들어감)
             EOF
 
-            # 7) Substitute env vars for image tag (Compose reads .env automatically)
+            # ENV 적용
             export DOCKER_IMAGE=${{ env.DOCKER_IMAGE }}
             export VERSION=${{ needs.build.outputs.version }}
 
-            # 8) Up stack
             docker compose up -d
 
-            # 9) Cleanup unused images
             docker image prune -f
