--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -82,7 +82,7 @@ springdoc:
 cors:
   allowed-origins:
     - "https://hwalibo-backend.duckdns.org"
-    - "https://frontendproj-git-main-choiys-projects.vercel.app"
+    - "https://frontendproj-three.vercel.app/"
     - "http://localhost:5173"
 
 logging:
@@ -91,10 +91,10 @@ logging:
 
 server:
   forward-headers-strategy: framework
+
 app:
   oauth2:
-    redirect-uri: http://localhost:5173/auth/callback
-    #https://frontendproj-git-main-choiys-projects.vercel.app/auth/callback
+    redirect-uri: https://frontendproj-three.vercel.app/auth/callback
 
 feature:
   vision:
